--- a/pages/home.html
+++ b/pages/home.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
+<head>  
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Página Inicial - devArea</title>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4137061202287584"
+     crossorigin="anonymous"></script>
   <link rel="stylesheet" href="../assets/css/global/base.css">  
   <link rel="stylesheet" href="../assets/css/global/layout.css">
   <link rel="stylesheet" href="../assets/css/global/theme.css">
