--- a/pages/salary-calculator.html
+++ b/pages/salary-calculator.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Calculadora de Salário Líquido</title>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4137061202287584"
+     crossorigin="anonymous"></script>
   <link rel="stylesheet" href="../assets/css/global/layout.css">  
   <link rel="stylesheet" href="../assets/css/global/base.css">
   <link rel="stylesheet" href="../assets/css/global/theme.css">   
