--- a/pages/privacy-policy.html
+++ b/pages/privacy-policy.html
@@ -19,7 +19,7 @@
   <div id="sidebar"></div>
 
     <main class="main-content">
-        <section style="background-color: white; max-width: 1000px; margin-top: 500px; margin-bottom: 100px; padding: 25px 25px 25px 25px;">
+        <section style="background-color: white; max-width: 1000px; padding: 25px 25px 25px 25px;">
             <h1>Política de Privacidade</h1>
 
             <h3 style="margin-top: 30px; margin-bottom: 15px;">Introdução</h3>
