--- a/pages/generator-cnpj.html
+++ b/pages/generator-cnpj.html
@@ -30,10 +30,12 @@
         <!-- Conteúdo das Abas -->
         <div id="generator-id" class="tab-content active">
           <h1 class="h1">Gerador de CNPJ</h1>
-          <p class="p">Use esta ferramenta para gerar CNPJs válidos aleatoriamente.</p>         
-          <label>
-            <input type="checkbox" id="generate-without-mask"> Gerar sem máscara
-          </label>
+          <p class="p">Use esta ferramenta para gerar CNPJs válidos aleatoriamente.</p> 
+          <div>
+            <input type="checkbox" id="generate-without-mask"> 
+            <label for="generate-without-mask">Gerar sem máscara</label>
+                         
+          </div>
           <button id="generate-cnpj-btn" class="button01">Gerar CNPJ</button>
           <div id="cnpj-result" class="result"></div>
         </div>
