ad sense second try

--- a/home.html
+++ b/home.html
@@ -15,8 +15,8 @@
   <!-- Header -->
   <div id="header"></div>
 
-  <!-- Sidebar -->
-  <div id="sidebar"></div>
+  <!-- Sidebar 
+  <div id="sidebar"></div>-->
 
   <!-- Main Content -->
   <main class="main-content">
