--- a/pages/privacy-policy.html
+++ b/pages/privacy-policy.html
@@ -15,8 +15,8 @@
   <!-- Header -->
   <div id="header"></div>
 
-  <!-- Sidebar -->
-  <div id="sidebar"></div>
+  <!-- Sidebar
+  <div id="sidebar"></div> -->
 
     <main class="main-content">
         <section style="background-color: white; max-width: 1000px; padding: 25px 25px 25px 25px;">
