--- a/pages/generator-cnpj.html
+++ b/pages/generator-cnpj.html
@@ -15,8 +15,8 @@
     <!-- Header -->
     <div id="header"></div>
 
-    <!-- Sidebar -->
-    <div id="sidebar"></div>
+    <!-- Sidebar 
+    <div id="sidebar"></div>-->
 
     <!-- Conteúdo principal -->
     <main class="main-content">
