ad sense second try 2

--- a/pages/calculator.html
+++ b/pages/calculator.html
@@ -6,9 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description"
     content="Calculadora de juros compostos online com explicação detalhada e exemplos práticos. Aprenda como calcular juros compostos de forma simples e rápida.">
-  <title>Simulador de Juros Compostos</title>
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4137061202287584"
-    crossorigin="anonymous"></script>
+  <title>Simulador de Juros Compostos - devArea</title>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4137061202287584" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="../assets/css/global/layout.css">
   <link rel="stylesheet" href="../assets/css/global/base.css">
   <link rel="stylesheet" href="../assets/css/global/theme.css">
