--- a/pages/privacy-policy.html
+++ b/pages/privacy-policy.html
@@ -3,9 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Política de Privacidade - devArea</title>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4137061202287584"
-     crossorigin="anonymous"></script>
+    <title>Política de Privacidade - devArea</title>    
     <link rel="stylesheet" href="../assets/css/global/layout.css">  
     <link rel="stylesheet" href="../assets/css/global/base.css">
     <link rel="stylesheet" href="../assets/css/global/theme.css">  
@@ -49,7 +47,8 @@
 
             <h3 style="margin-top: 30px; margin-bottom: 15px;">Contato</h3>
             <p>Se você tiver qualquer dúvida sobre esta Política de Privacidade, entre em contato conosco pelo e-mail: <a href="mailto:matheus.barison@aluno.ufabc.edu.br">matheus.barison@aluno.ufabc.edu.br</a>.</p>
-        </section>
+            <p style="display: flex; justify-content: end;"><strong>Última atualização: Janeiro de 2025</strong></p>
+          </section>
     </main>
 
   <!-- Footer -->
