--- a/pages/generator-cnpj.html
+++ b/pages/generator-cnpj.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Gerador de CNPJ</title>
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4137061202287584"
-     crossorigin="anonymous"></script>
+  <meta name="description" content="Gerador de CNPJ online e gratuito, gerar CNPJ com máscara e sem máscara. Validador de CNPJ, saiba se o CNPJ está no formato correto.">
+  <title>Gerador de CNPJ - devArea</title>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4137061202287584" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="../assets/css/global/layout.css">  
   <link rel="stylesheet" href="../assets/css/global/base.css">
   <link rel="stylesheet" href="../assets/css/global/theme.css">   
