--- a/pages/salary-calculator.html
+++ b/pages/salary-calculator.html
@@ -4,9 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Entenda como calcular o salário líquido a partir do salário bruto com deduções de impostos e contribuições. Saiba mais sobre INSS, IRPF e outras taxas.">
-  <title>Calculadora de Salário Líquido</title>
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4137061202287584"
-     crossorigin="anonymous"></script>
+  <title>Calculadora de Salário Líquido - devArea</title>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4137061202287584" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="../assets/css/global/layout.css">  
   <link rel="stylesheet" href="../assets/css/global/base.css">
   <link rel="stylesheet" href="../assets/css/global/theme.css">   
@@ -71,8 +70,8 @@
         </p>
         <section style="display: flex; justify-content: center; margin-bottom: 20px;">
           <ul>
-            <li style="margin-bottom: 15px;"><strong>INSS:</strong> Contribuição previdenciária destinada à aposentadoria e benefícios sociais. Segue a tabela abaixo:</li>
-            <table style="border-collapse: collapse; width: 100%; margin-bottom: 20px;">
+            <li><strong>INSS:</strong> Contribuição previdenciária destinada à aposentadoria e benefícios sociais. Segue a tabela abaixo:</li>
+            <table style="border-collapse: collapse; width: 100%;">
               <thead>
                   <tr>
                       <th style="border: 1px solid #000; padding: 8px; text-align: left;">Salário de Contribuição</th>
@@ -98,9 +97,10 @@
                   </tr>
               </tbody>
             </table>
+            <p style="margin-bottom: 15px;">Fonte: <cite><a href="https://www.gov.br/inss/pt-br/noticias/confira-como-ficaram-as-aliquotas-de-contribuicao-ao-inss" target="_blank">Tabela de INSS - 2025</a></cite></p> 
                   
             <li style="margin-bottom: 20px;"><strong>IRPF:</strong> Imposto de Renda Retido na Fonte, calculado com base na sua faixa salarial.</li>
-            <table style="border-collapse: collapse; width: 100%; margin-bottom: 20px;">
+            <table style="border-collapse: collapse; width: 100%;">
               <thead>
                   <tr>
                       <th style="border: 1px solid #000; padding: 8px; text-align: left;">Faixa</th>
@@ -142,6 +142,7 @@
                   </tr>
               </tbody>
             </table>
+            <p style="margin-bottom: 15px;">Fonte: <cite><a href="https://borainvestir.b3.com.br/noticias/imposto-de-renda/tabela-do-imposto-de-renda-2025-saiba-quanto-a-receita-federal-morde-do-seu-salario/" target="_blank">Tabela de IRPF - 2025</a></cite></p> 
             <li><strong>Outros descontos:</strong> Pode incluir vale-transporte, plano de saúde, previdência privada, entre outros.</li>
           </ul>
         </section>      
