--- a/pages/generator-uuid.html
+++ b/pages/generator-uuid.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Gerador de UUID online e gratuito, gerar identtificadores UUID no formato v4.">
+  <meta name="description" content="Gerador de UUID online e gratuito, gerar identificadores UUID no formato v4.">
   <title>Calculadora de Salário Líquido - devArea</title>
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4137061202287584" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="../assets/css/global/layout.css">  
