--- a/pages/calculator.html
+++ b/pages/calculator.html
@@ -19,6 +19,9 @@
   <!-- Header -->
   <div id="header"></div>
 
+  <!-- Header -->
+  <div id="breadcrumb-identifier" class="breadcrumb"></div>
+
   <!-- Sidebar 
   <div id="sidebar"></div>-->
 
