--- a/home.html
+++ b/home.html
@@ -2,8 +2,11 @@
 <html lang="pt-BR">
 <head>  
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Página Inicial - devArea</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">  
+  <title>devArea - Ferramentas Online para Desenvolvedores</title>
+  <meta name="description" content="O devArea oferece ferramentas gratuitas para desenvolvedores, como gerador de CNPJ, validação de dados e muito mais! Confira agora.">
+  <meta name="keywords" content="ferramentas online, gerador de CNPJ, ferramentas para desenvolvedores, devArea, utilidades online">
+  <meta name="author" content="devArea">  
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4137061202287584"
      crossorigin="anonymous"></script>
   <link rel="stylesheet" href="../assets/css/global/base.css">  
