--- a/pages/calculator.html
+++ b/pages/calculator.html
@@ -20,7 +20,7 @@
   <div id="header"></div>
 
   <!-- Header -->
-  <div id="breadcrumb-identifier" class="breadcrumb"></div>
+  <!--<div id="breadcrumb-identifier" class="breadcrumb"></div>-->
 
   <!-- Sidebar 
   <div id="sidebar"></div>-->
