--- a/pages/privacy-policy.html
+++ b/pages/privacy-policy.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Política de Privacidade - devArea</title>    
+    <link rel="icon" href="../resources/site-logo-ico.ico" type="image/x-icon">
+    <link rel="apple-touch-icon" href="../resources/site-logo-ico.ico">
     <link rel="stylesheet" href="../assets/css/global/layout.css">  
     <link rel="stylesheet" href="../assets/css/global/base.css">
     <link rel="stylesheet" href="../assets/css/global/theme.css">  
