--- a/home.html
+++ b/home.html
@@ -9,6 +9,8 @@
   <meta name="author" content="devArea">  
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4137061202287584"
      crossorigin="anonymous"></script>
+  <link rel="icon" href="../resources/site-logo-ico.ico" type="image/x-icon">
+  <link rel="apple-touch-icon" href="../resources/site-logo-ico.ico">
   <link rel="stylesheet" href="../assets/css/global/base.css">  
   <link rel="stylesheet" href="../assets/css/global/layout.css">
   <link rel="stylesheet" href="../assets/css/global/theme.css">
