--- a/pages/generator-cnpj.html
+++ b/pages/generator-cnpj.html
@@ -6,6 +6,8 @@
   <meta name="description" content="Gerador de CNPJ online e gratuito, gerar CNPJ com máscara e sem máscara. Validador de CNPJ, saiba se o CNPJ está no formato correto.">
   <title>Gerador de CNPJ - devArea</title>
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4137061202287584" crossorigin="anonymous"></script>
+  <link rel="icon" href="../resources/site-logo-ico.ico" type="image/x-icon">
+  <link rel="apple-touch-icon" href="../resources/site-logo-ico.ico">
   <link rel="stylesheet" href="../assets/css/global/layout.css">  
   <link rel="stylesheet" href="../assets/css/global/base.css">
   <link rel="stylesheet" href="../assets/css/global/theme.css">   
