--- a/pages/salary-calculator.html
+++ b/pages/salary-calculator.html
@@ -6,6 +6,8 @@
   <meta name="description" content="Entenda como calcular o salário líquido a partir do salário bruto com deduções de impostos e contribuições. Saiba mais sobre INSS, IRPF e outras taxas.">
   <title>Calculadora de Salário Líquido - devArea</title>
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4137061202287584" crossorigin="anonymous"></script>
+  <link rel="icon" href="../resources/site-logo-ico.ico" type="image/x-icon">
+  <link rel="apple-touch-icon" href="../resources/site-logo-ico.ico">
   <link rel="stylesheet" href="../assets/css/global/layout.css">  
   <link rel="stylesheet" href="../assets/css/global/base.css">
   <link rel="stylesheet" href="../assets/css/global/theme.css">   
