--- a/pages/calculator.html
+++ b/pages/calculator.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description"
     content="Calculadora de juros compostos online com explicação detalhada e exemplos práticos. Aprenda como calcular juros compostos de forma simples e rápida.">
-  <title>Simulador de Juros Compostos - devArea</title>
+  <title>Simulador de Juros Compostos</title>
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4137061202287584" crossorigin="anonymous"></script> 
   <link rel="icon" href="../resources/site-logo-ico.ico" type="image/x-icon">
   <link rel="apple-touch-icon" href="../resources/site-logo-ico.ico"> 
@@ -21,8 +21,8 @@
   <!-- Header -->
   <div id="header"></div>
 
-  <!-- Header -->
-  <!--<div id="breadcrumb-identifier" class="breadcrumb"></div>-->
+  <!-- breadcrumb -->
+  <div id="breadcrumb-identifier" class="breadcrumb"></div>
 
   <!-- Sidebar 
   <div id="sidebar"></div>-->
