--- a/pages/usage-terms.html
+++ b/pages/usage-terms.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Termos de Uso - devArea</title>
+    <title>Termos de Uso</title>
     <link rel="icon" href="../resources/site-logo-ico.ico" type="image/x-icon">
     <link rel="apple-touch-icon" href="../resources/site-logo-ico.ico">
     <link rel="stylesheet" href="../assets/css/global/layout.css">  
@@ -14,6 +14,9 @@
 <body>
   <!-- Header -->
   <div id="header"></div>
+
+  <!-- breadcrumb -->
+  <div id="breadcrumb-identifier" class="breadcrumb"></div>
 
   <!-- Sidebar
   <div id="sidebar"></div> -->
