--- a/pages/generator-cnpj.html
+++ b/pages/generator-cnpj.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Gerador de CNPJ online e gratuito, gerar CNPJ com máscara e sem máscara. Validador de CNPJ, saiba se o CNPJ está no formato correto.">
-  <title>Gerador de CNPJ - devArea</title>
+  <title>Gerador de CNPJ</title>
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4137061202287584" crossorigin="anonymous"></script>
   <link rel="icon" href="../resources/site-logo-ico.ico" type="image/x-icon">
   <link rel="apple-touch-icon" href="../resources/site-logo-ico.ico">
@@ -17,6 +17,9 @@
     <!-- Header -->
     <div id="header"></div>
 
+    <!-- breadcrumb -->
+    <div id="breadcrumb-identifier" class="breadcrumb"></div>
+    
     <!-- Sidebar 
     <div id="sidebar"></div>-->
 
