--- a/pages/generator-uuid.html
+++ b/pages/generator-uuid.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Gerador de UUID online e gratuito, gerar identificadores UUID no formato v4.">
-  <title>Calculadora de Salário Líquido - devArea</title>
+  <title>Gerador de UUID</title>
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4137061202287584" crossorigin="anonymous"></script>
   <link rel="icon" href="../resources/site-logo-ico.ico" type="image/x-icon">
   <link rel="apple-touch-icon" href="../resources/site-logo-ico.ico">
@@ -16,6 +16,9 @@
 <body>
   <!-- Header -->
   <div id="header"></div>
+
+  <!-- breadcrumb -->
+  <div id="breadcrumb-identifier" class="breadcrumb"></div>
 
   <!-- Sidebar 
   <div id="sidebar"></div>-->
