--- a/pages/salary-calculator.html
+++ b/pages/salary-calculator.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Entenda como calcular o salário líquido a partir do salário bruto com deduções de impostos e contribuições. Saiba mais sobre INSS, IRPF e outras taxas.">
-  <title>Calculadora de Salário Líquido - devArea</title>
+  <title>Calculadora de Salário Líquido</title>
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4137061202287584" crossorigin="anonymous"></script>
   <link rel="icon" href="../resources/site-logo-ico.ico" type="image/x-icon">
   <link rel="apple-touch-icon" href="../resources/site-logo-ico.ico">
@@ -17,6 +17,9 @@
 <body>
   <!-- Header -->
   <div id="header"></div>
+
+  <!-- breadcrumb -->
+  <div id="breadcrumb-identifier" class="breadcrumb"></div>
 
   <!-- Sidebar
   <div id="sidebar"></div> -->
